storage-proxy/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox0-system
  labels:
    name: sandbox0-system
